// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.CookiesInfo chapterLevel=0 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo chapterLevel=1 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo chapterLevel=2 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo chapterLevel=3 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo chapterLevel=4 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo chapterLevel=5 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo chapterLevel=6 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo className="my-classname" 1`] = `
<Section
  className="uu5-bricks-cookies-info my-classname"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo controlled=false 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo controlled=true 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo data={"header":"Cookies Info Header","chapters":[{"header":"Chapter header ","rows":["chapter line of text","chapter line of text"]}]} 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  header="Cookies Info Header"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <Row
    header="Chapter header "
    key="0"
    level={2}
  >
    <P
      content="chapter line of text"
      key="0"
    />
    <P
      content="chapter line of text"
      key="1"
    />
  </Row>
</Section>
`;

exports[`UU5.Bricks.CookiesInfo default props 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo disabled=false 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo disabled=true 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  disabled={true}
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo docKit example UU5.Bricks.CookiesInfo should render without crash 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
>
  <Row
    key="0"
    level={4}
  >
    <P
      content="Cookie je krátký textový soubor, který navštívená webová stránka odešle do prohlížeče. Umožňuje webu zaznamenat informace o vaší návštěvě, například preferovaný jazyk a další nastavení. Příští návštěva stránek tak může být snazší a produktivnější. Soubory cookie jsou důležité. Bez nich by procházení webu bylo mnohem složitější."
      key="0"
    />
    <P
      content="Soubory cookie slouží k celé řadě účelů. Používáme je například ke sledování počtu návštěvníků na stránce, k usnadnění registrace nových služeb, k výběru relevantních reklam, k ochraně vašich dat, aj."
      key="1"
    />
  </Row>
  <Row
    key="1"
    level={4}
  >
    <P
      content="Při zpracování těchto souborů důsledně dbáme na ochranu vašeho soukromí a vždy postupujeme v souladu s příslušnými právními předpisy a etickými standardy. Veškeré získané údaje chráníme za použití těch nejmodernějších technologií, a dalším osobám či firmám je sdělujeme pouze v nezbytně nutném rozsahu, vyjma případů, kdy nám poskytnutí osobních údajů může uložit zákon."
      key="0"
    />
  </Row>
  <Row
    key="2"
    level={4}
  >
    <P
      content="Ano, stačí, když si před návštěvou našich stránek ve svém prohlížeči spustíte funkci anonymního prohlížení. V takovém případě je ale možné, že se vám některé části našich stránek nebudou zobrazovat správně a jejich prohlížení pro vás může být složitější."
      key="0"
    />
  </Row>
</Section>
`;

exports[`UU5.Bricks.CookiesInfo headerLevel=0 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={0}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo headerLevel=1 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo headerLevel=2 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={2}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo headerLevel=3 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={3}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo headerLevel=4 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={4}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo headerLevel=5 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={5}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo headerLevel=6 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={6}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo hidden=false 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo hidden=true 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  hidden={true}
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo id="myId" 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="myId-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo mainAttrs=undefined 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo name="myName" 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  name="myName-inner"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel="bigBox" 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBox"
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel="bigBoxCollection" 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel="box" 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="box"
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel="boxCollection" 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="boxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel="container" 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel="inline" 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel="page" 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel="smallBox" 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="smallBox"
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel="smallBoxCollection" 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="smallBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo nestingLevel="spa" 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo noIndex=false 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo noIndex=true 1`] = `
<Section
  className="uu5-bricks-cookies-info uu5-noindex"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo pureRender=false 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo pureRender=true 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  pureRender={true}
/>
`;

exports[`UU5.Bricks.CookiesInfo selected=false 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.CookiesInfo selected=true 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  selected={true}
/>
`;

exports[`UU5.Bricks.CookiesInfo style="padding:8px; borderRadius: 2px" 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
/>
`;

exports[`UU5.Bricks.CookiesInfo style={"backgroundColor":"red","color":"blue"} 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
/>
`;

exports[`UU5.Bricks.CookiesInfo tooltip="My Tooltip" 1`] = `
<Section
  className="uu5-bricks-cookies-info"
  id="uuID-inner"
  level={1}
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  nestingLevel="bigBoxCollection"
  tooltip="My Tooltip"
/>
`;
